# Achilles

./: .env.example  .gitignore  .mcp.json  AUTH_PLAN.md  CLAUDE.md  DEMO_SCRIPT.md  DEPLOY.md  DRIVE_B.md  LICENSE  METHODS.md  Makefile  PITCH.md  PRIVACY.md  README.md  SUBMISSION.md  SUBMISSION_AUDIT.md  docker-compose.yml
backend/: Dockerfile  Procfile  pyproject.toml  railway.toml
backend/app/: audit.py  bridge_shaping.py  config.py  db.py  export_shaping.py  graph_shaping.py  main.py  qa.py  report.py  search_shaping.py  targets_shaping.py  treatment_shaping.py
backend/app/ai/: ask.py  client.py  docking_cache.py  embeddings.py  extraction.py  grounding.py  narration_cache.py  prompts.py  tamarind.py  targets.py  trajectory.py  treatment.py
backend/app/ingestion/: collateral.py  domains.py  export_seed_sql.py  flippers.py  lineage.py  parsers.py  scoring.py  seed.py  seed_collateral.py  seed_literature.py  seed_targets.py  trajectories.py  upload.py  validation.py
backend/app/models/: domain.py
backend/app/routers/: ask.py  audit.py  bridge.py  docking.py  domains.py  export.py  graph.py  ingest.py  literature.py  (+7 more)
backend/tests/: test_ai_client.py  test_audit.py  test_bridge.py  test_burkdata.py  test_core.py  test_cycling_public.py  test_docking.py  test_domains.py  test_export.py  test_generalization.py  test_narration.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_provenance_trace.py  test_qa.py  test_report.py  test_retrodiction.py  test_search.py  test_tamarind.py  test_trajectories.py  test_upload.py  test_validation.py
(+352 files in other folders)
