[project]
name = "achilles"
version = "0.1.0"
description = "AI-native AMR target identification and treatment optimization"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "anthropic>=0.40",
    "httpx>=0.27",
    "polars>=1.12",
    "cyvcf2>=0.31",
    "numpy>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7", "black>=24.10"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
